# nautilus_zerodha

./: .gitignore  CLAUDE.md  implementation_guide.md  pyproject.toml
nautilus_docs/: keywords.txt
nautilus_docs/code/: CONTRIBUTING.txt  README.txt
nautilus_docs/code/crates/adapters/blockchain/: README.txt
nautilus_docs/code/crates/common/examples/: greeks.txt
nautilus_docs/code/crates/common/proptest-regressions/: throttler.txt
nautilus_docs/code/docs/concepts/: actors.txt  adapters.txt  architecture.txt  backtesting.txt  cache.txt  data.txt  execution.txt  instruments.txt  live.txt  logging.txt  message_bus.txt  orders.txt  overview.txt  portfolio.txt  strategies.txt
nautilus_docs/code/docs/developer_guide/: adapters.txt  coding_standards.txt  docs.txt  environment_setup.txt  rust.txt  testing.txt
nautilus_docs/code/docs/getting_started/: backtest_high_level.txt  backtest_low_level.txt  index.txt  installation.txt  quickstart.txt
nautilus_docs/code/docs/integrations/: betfair.txt  binance.txt  bybit.txt  coinbase_intx.txt  databento.txt  dydx.txt  ib.txt  index.txt  polymarket.txt  tardis.txt
nautilus_docs/code/docs/tutorials/: backtest_binance_orderbook.txt  backtest_bybit_orderbook.txt  backtest_fx_bars.txt  databento_data_catalog.txt  databento_overview.txt  index.txt  loading_external_data.txt  parquet_explorer.txt
nautilus_docs/code/examples/: README.txt
nautilus_docs/code/tests/mem_leak_tests/: README.txt
nautilus_docs/manual/: combine.py  combined.md
nautilus_zerodha/: __init__.py  api.py  config.py  providers.py
(+4 files in other folders)
